[package]
name = "tiny-artnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
tiny-artnet-bytes-no-atomic = { version = "1.2.1", default-features = false }

[dev-dependencies]
local-ip-address = "0.4.8"
mac_address = "1.1.4"
